--- a/server/djangoapp/templates/djangoapp/login.html
+++ b/server/djangoapp/templates/djangoapp/login.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <!-- Add any additional styling or scripts here -->
+</head>
+<body>
+    <h2>Login</h2>
+    <form method="post" action="{% url 'djangoapp:login' %}">
+        {% csrf_token %}
+        <label for="username">Username:</label>
+        <input type="text" name="username" required><br>
+        <label for="password">Password:</label>
+        <input type="password" name="password" required><br>
+        <button type="submit">Login</button>
+    </form>
+</body>
+</html>
